--- a/client/jsapp.css
+++ b/client/jsapp.css
@@ -1,4 +1,48 @@
 h1 {
 	text-align: center;
-	color: blue;
+	color: black;
+  background-color: white;
+  margin: auto;
+  width: 40%;
+}
+
+.container {
+	margin: auto;
+	width:40%;
+	background-color:white;
+}
+
+.center {
+	text-align: center;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+body {
+  margin: 0;
+  background-color: #FFCE9D;
+  font-family: Arial, Helvetica, sans-serif
+}
+
+.underline {
+	text-decoration:underline;
+}
+
+button {
+  font-size:150%;
+  background-color: white;
+  border:2px solid #FFCE9D;
+  padding:5px;
+  border-radius: 30%;
+}
+
+#result {
+  font-size: 200%;
+  text-align: center;
+  background-color: black;
+  color: white;
+  width: 40%;
+  margin: auto;
 }
